fix: editor spacing and doc code font (#145)

--- a/apps/docs/styles/global.css
+++ b/apps/docs/styles/global.css
@@ -77,6 +77,6 @@ html {
 	transition-timing-function: ease-out;
 }
 
-.token {
-  font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
+.documentation-code {
+  font-family: monospace;
 }
